<resources>
    <string name="app_name">EasyLife</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Insurance Category</string>
    <string name="menu_slideshow">Add Policy</string>
    <string name="menu_allpolicyholder">All Policy Holder</string>
    <string name="menu_calculatepolicy">Calculate Policy</string>
    <string name="menu_paymentinstallment">Payment Installment</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_bonus">Bonus</string>
    <string name="menu_hospitality">Hospitality</string>
    <string name="menu_claim">Claim</string>
</resources>