<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.easylifeapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_insurancecategory"
        android:name="com.example.easylifeapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_addpolicy"
        android:name="com.example.easylifeapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_allpolicy"
        android:name="com.example.easylifeapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_allpolicyholder"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_calculate"
        android:name="com.example.easylifeapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_calculatepolicy"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.easylifeapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_paymentinstallment"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.easylifeapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.easylifeapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_bonus"
        android:name="com.example.easylifeapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_bonus"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_hospitality"
        android:name="com.example.easylifeapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_hospitality"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_claim"
        android:name="com.example.easylifeapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_claim"
        tools:layout="@layout/fragment_slideshow" />
</navigation>